# butterflai

./: 404.html  README.md  index.html  memory.md  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/getting-started-with-llms/: index.html
blog/navigating-noise/: index.html
contact/: index.html
deploy/: index.html
deploy/aws-lambda/: index.html
deploy/mlops-fundamentals/: index.html
docs/: contact.md  index.md  testimonials.md
docs/blog/: index.md
docs/blog/getting-started-with-llms/: index.md
docs/blog/navigating-noise/: index.md
docs/deploy/: index.md
docs/deploy/mlops-fundamentals/: index.md
docs/solutions/: index.md
docs/team/: index.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/blog/: index.html
site/blog/getting-started-with-llms/: index.html
site/blog/navigating-noise/: index.html
site/contact/: index.html
site/deploy/: index.html
site/deploy/aws-lambda/: index.html
site/deploy/mlops-fundamentals/: index.html
site/search/: search_index.json
site/solutions/: index.html
site/stylesheets/: extra.css
site/team/: index.html
site/testimonials/: index.html
solutions/: index.html
stylesheets/: extra.css
team/: index.html
testimonials/: index.html
