[project]
name = "ButterflAI_Website_Content"
version = "0.1.0"
description = "ButterflAI Website"
requires-python = ">=3.12"
authors = ["Vikram Ardham"]
dependencies = [
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-glightbox",
    "mkdocs-material-extensions",
    "pillow",
    "cairosvg",
    "mkdocs>=1.6.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
